src/test/ui/hygiene/intercrate.stderr
error: type `fn() -> u32 {intercrate::foo::bar::f}` is private
  --> $DIR/intercrate.rs:10:16
   |
LL |     assert_eq!(intercrate::foo::m!(), 1);
   |                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

